Don't use "valueOf" when "new" is intended. Attempt to fix battleAction.
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@5617 b29ace70-8910-0410-8dcc-aa2fc6433167